8 Januari 2007: Wouter
	- ipc_send_blocked will not lead to busy waiting on it, but will block
	  in select, until SOA_END comes by.
	- server_main sends SOA_END if reload crashes, to xfrd. So that xfrd
	  can set ipc_blocked=0 and can_send_reload=1; and thus resume service,
	  assuming that the crash was a temporary condition. 
	  This will lead to trying every reload-timeout seconds to reload
	  if it is a permanent condition. Which is more obvious to the 
	  operator.
	- put the error "error: diff: RR ns.kiev.ua. already exists" in
	  debug mode only. Zone transfers with this error are liberally
	  accepted, and we should not spam the logfile.
	- empty zones will not be retried forever every 10 seconds,
	  but exponential backoff to a max of every 4 hours.
	  The exact value is randomised to spread out attempts.

5 Januari 2007: Wouter
	- Fixed --zonesdir=<path> for configure. The value did not get used
	  as a default value. Now it is used as a default value. If a 
	  default value is set for zonesdir, you can go to a 'no value 
	  specified' by giving the empty string, zonesdir: "" in nsd.config.
	- Fixed checkconf.tpkg for this change. nsd-checkconf will 
	  output zonesdir: "" as this is the default for --zonesdir.

2 Januari 2007: Wouter
	- Added contrib script from Stephane Bortzmeyer to convert NSD 2 to 
	  NSD 3 config files. Converts secondary zones and TSIG keys.
	- Made config conversion script skip empty lines.
	- Made config conversion script convert primary zones (and notify).
	- Nsdc control script will exit with 'nsd startup failed.' if nsd
	  fails to start (due to bad config file for example).

15 December 2006: Wouter
	- Removed dlopen() checks from configure.ac, NSD3 no longer has
	  dynamic plugin support (since 3.0.0).
	- added .rpm spec file to contrib.
	- Updated README to remove reference to buildzones script.

12 December 2006: Wouter
	- Added missing include to ipc.c to compile on SunOS.